One Page Mania Ribbon
Featured on One Page Mania Ribbon Added

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 
 	<body>
 
+		<!-- Featured on One Page Mania Ribbon-->
+                <a href="http://onepagemania.com/" target="_blank">My Site was featured on One Page Mania</a>
+
 		<!-- Header block to contain the menu icon, logo image and Hire me button -->
 		<header class="fixed-header">
 
