added opm class

--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@
 
 	<body>
 
-		<!-- Featured on One Page Mania Ribbon-->
-                <a href="http://onepagemania.com/" target="_blank">My Site was featured on One Page Mania</a>
-
 		<!-- Header block to contain the menu icon, logo image and Hire me button -->
 		<header class="fixed-header">
 
 			<a href="#modal" class="open">
 				<span class="icon-menu hide-text">Menu</span>
 			</a>
+			
+			
+			<!-- Featured on One Page Mania Ribbon-->
+	                <a class="opm-ribbon" href="http://onepagemania.com/" target="_blank">My Site was featured on One Page Mania</a>
 
 			<a href="#home">
 				<span>jk</span>
