opm ribbon structure update
with link

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 	</head>
 
 	<body>
+			
+		<!-- Featured on One Page Mania Ribbon-->
+	        <a class="opm-ribbon" href="http://onepagemania.com/jeya-karthika" target="_blank">
+	        	<img src="https://s3.amazonaws.com/onepagemania/opm-badge.png" alt="My Site was featured on One Page Mania" />
+	        </a>
 
 		<!-- Header block to contain the menu icon, logo image and Hire me button -->
 		<header class="fixed-header">
