--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<a href="#home"><span>Home</span></a>
 				<a href="#portfolio"><span>Work</span></a>
 				<a href="#about"><span>About</span></a>
-				<a href="http://jeyakarthika.com"><span>Blog</span></a>
+				<a href="http://jeya.me"><span>Blog</span></a>
 				<a href="#contact"><span>Contact</span></a>
 			</nav>
 		</div>
