--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Meta tags -->
     <meta charset="utf-8" />
-    <meta http-equiv=“X-UA-Compatible” content=“IE=edge” />
+    <meta http-equiv=“X-UA-Compatible” content=“IE=edge, chrome=1” />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="This is the portfolio of Jeya Karthika, a User Experience designer based in Brisbane.">
     <meta name="keywords" content="Jeya Karthika, UX Designer, UI Designer, Web Designer, Design Portfolio, Brisbane, Indian Designer, ThinkFul Alumni, BLOC Alumni">
@@ -41,8 +41,10 @@
     <link href="favicon.ico" rel="shortcut icon" />
     <link rel="stylesheet" href="style/app.css" />
 
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <!--[if (lt IE 9) & (!IEMobile)]>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6/html5shiv.min.js"></script>
     <![endif]-->
 
     <!--[if IE 7]> <html class="ie7"> <![endif]-->  
@@ -53,6 +55,6 @@
 
   </head>
   <body>
-    
+
   </body>
 </html>
