created html structure for home

--- a/index.html
+++ b/index.html
@@ -55,6 +55,96 @@
 
   </head>
   <body>
+    <header>
+      <div class="logo-container">
+        <h1>Jeya Karthika</h1>
+      </div>
+      <nav>
+        <ul>
+          <li>Work</li>
+          <li>Thoughts</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+    </header>
+    <section class="work">
+      <div>
+        <h2>Selected Works</h2>
+        <p>I’m Jeya Karthika, a UX designer based in Brisbane, <span>crafting delightful visual experiences for mobile/web</span> that empower and engage users. You can find some of my work <a href="#">below</a>.</p>
+      </div>
+      <div>
+        <div>
+          <h4>Android Application</h4>
+          <h3>PitchMojo</h3>
+          <p>Mobile app experience design that enables entrepreneurs to transform ideas to pitch on the go.</p>
+          <a href="#">View Case Study</a>
+        </div>
+      </div>
+      <div>
+        <div>
+          <h4>E-Commerce Shop</h4>
+          <h3>Sutra</h3>
+          <p>E-Commerce Online Shopping experience and Branding for a T-Shirt shop.<p>
+          <a href="#">View Case Study</a>
+        </div>
+      </div>
+      <div>
+        <div>
+          <h4>SaaS Startup</h4>
+          <h3>Jott.ly</h3>
+          <p>Cohesive Branding and product landing page designed to encourage users to signup.</p>
+          <a href="#">View Case Study</a>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div>
+        <p>Let's <a href="#">talk</a>.</p>
+        <p>About user experience, your ideas or new opportunities</p>
+      </div>
+      <div>
+        <div>
+          <a href="#"><span class="fa"></span></a>
+        </div>
 
+        <div>
+          <a href="#"><span class="fa"></span></a>
+        </div>
+
+        <div>
+          <a href="#"><span class="fa"></span></a>
+        </div>
+
+        <div>
+          <a href="#"><span class="fa"></span></a>
+        </div>
+
+        <div>
+          <a href="#"><span class="fa"></span></a>
+        </div>
+
+        <div>
+          <a href="#"><span class="fa"></span></a>
+        </div>
+      </div>
+      <div>
+        <nav>
+          <ul>
+            <li>Work</li>
+            <li>Thoughts</li>
+            <li>About</li>
+            <li>Contact</li>
+          </ul>
+        </nav>
+        <div class="logo-container">
+          <h1>Jeya Karthika</h1>
+        </div>
+        <div>
+          <p>Crafted with love by <a href="#">jeya</a>.</p>
+          <p>Copyright &copy; 2015 Jeya. All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
