space/Indentation adjustment and comments added

--- a/index.html
+++ b/index.html
@@ -54,10 +54,13 @@
 
   </head>
   <body>
+    <!-- Logo and top nav - reused in all pages -->
     <header>
+
       <div class="logo-container">
         <h1>Jeya Karthika</h1>
       </div>
+
       <nav>
         <ul>
           <li>Work</li>
@@ -66,12 +69,20 @@
           <li>Contact</li>
         </ul>
       </nav>
+
     </header>
+
+    <!-- Main Section of the page -->
     <section class="work">
+
+      <!-- Section Information -->
       <div>
         <h2>Selected Works</h2>
         <p>I’m Jeya Karthika, a UX designer based in Brisbane, <span>crafting delightful visual experiences for mobile/web</span> that empower and engage users. You can find some of my work <a href="#">below</a>.</p>
       </div>
+
+      <!-- Portfolio Case Study Panels -->
+      <!-- PitchMojo Case Study -->
       <div>
         <div>
           <h4>Android Application</h4>
@@ -80,6 +91,8 @@
           <a href="#">View Case Study</a>
         </div>
       </div>
+
+      <!-- Sutra Case Study -->
       <div>
         <div>
           <h4>E-Commerce Shop</h4>
@@ -88,6 +101,8 @@
           <a href="#">View Case Study</a>
         </div>
       </div>
+
+      <!-- Jottly Case Study -->
       <div>
         <div>
           <h4>SaaS Startup</h4>
@@ -96,12 +111,19 @@
           <a href="#">View Case Study</a>
         </div>
       </div>
+
     </section>
+
+    <!-- Footer - reused in all pages -->
     <footer>
+
+      <!-- call to Action -->
       <div>
         <p>Let's <a href="#">talk</a>.</p>
         <p>About user experience, your ideas or new opportunities</p>
       </div>
+
+      <!-- Social Media Icons -->
       <div>
         <div>
           <a href="#"><span class="fa"></span></a>
@@ -127,6 +149,8 @@
           <a href="#"><span class="fa"></span></a>
         </div>
       </div>
+
+      <!-- Footer nav and coyright -->
       <div>
         <nav>
           <ul>
@@ -144,6 +168,8 @@
           <p>Copyright &copy; 2015 Jeya. All Rights Reserved.</p>
         </div>
       </div>
+
     </footer>
+    
   </body>
 </html>
