--- a/index.html
+++ b/index.html
@@ -36,9 +36,13 @@
     <!-- Fonts -->
     <script src="//use.typekit.net/ljp5jff.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     
-    <link href="favicon.ico" rel="shortcut icon" />
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="style/app.css" />
+
+    <!-- Fav Icon -->
+    <link href="favicon.ico" rel="shortcut icon" />
 
     <!--[if (lt IE 9) & (!IEMobile)]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
@@ -170,6 +174,6 @@
       </div>
 
     </footer>
-    
+
   </body>
 </html>
