--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <link rel="stylesheet" href="style/app.css" />
 
     <!-- Fav Icon -->
-    <link href="favicon.ico" rel="shortcut icon" />
+    <link href="images/favicon.ico" rel="shortcut icon" />
 
     <!--[if (lt IE 9) & (!IEMobile)]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
