--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <!-- Logo and top nav - reused in all pages  -->
     <header class="pure-g">
-      <nav class="pure-menu pure-menu-fixed pure-menu-horizontal">
+      <nav class="pure-menu pure-menu-horizontal">
         <a class="logo pure-menu-heading" href="http://jeya.io"><img src="images/logo.png" alt="Jeya Karthika"></a>
         <ul class="menu pure-menu-list">
           <li class="pure-menu-item pure-menu-selected"><a href="#" class="current-page pure-menu-link">Work</a></li><!-- 
@@ -98,7 +98,7 @@
         <div class="work-content">
           <h4>E-Commerce Shop</h4>
           <h3>Sutra</h3>
-          <p>E-Commerce Online Shopping experience and Branding for a T-Shirt shop.<p>
+          <p>E-Commerce Online Shopping experience and Branding for a T-Shirt shop.</p>
           <a href="#">View Case Study</a>
         </div>
       </div>
@@ -117,43 +117,43 @@
 
     <!-- Footer - reused in all pages -->
     <footer class="pure-g">
-      <div class="footer-content">
+      <!-- <div class="pure-u-1 footer-content"> -->
 
         <!-- call to Action -->
-        <div>
+        <div class="pure-u-1 footer-content call-to-action">
           <p>Let's <a href="#">talk</a>.</p>
           <p>About user experience, your ideas or new opportunities</p>
         </div>
 
         <!-- Social Media Icons -->
-        <div>
-          <div>
-            <a href="#"><span class="fa"></span></a>
+        <div class="pure-u-1 footer-content social-media-icons">
+          <div class="icon">
+            <a href="#"><span class="fa fa-twitter"></span></a>
           </div>
 
-          <div>
-            <a href="#"><span class="fa"></span></a>
+          <div class="icon">
+            <a href="#"><span class="fa fa-instagram"></span></a>
           </div>
 
-          <div>
-            <a href="#"><span class="fa"></span></a>
+          <div class="icon">
+            <a href="#"><span class="fa fa-linkedin"></span></a>
           </div>
 
-          <div>
-            <a href="#"><span class="fa"></span></a>
+          <div class="icon">
+            <a href="#"><span class="fa fa-dribbble"></span></a>
           </div>
 
-          <div>
-            <a href="#"><span class="fa"></span></a>
+          <div class="icon">
+            <a href="#"><span class="fa fa-behance"></span></a>
           </div>
 
-          <div>
-            <a href="#"><span class="fa"></span></a>
+          <div class="icon">
+            <a href="#"><span class="fa fa-envelope"></span></a>
           </div>
         </div>
 
         <!-- Footer nav and coyright -->
-        <div>
+        <div class="pure-u-1 footer-content bottom-nav">
           <nav class="pure-menu pure-menu-horizontal">
             <ul class="menu pure-menu-list">
               <li class="pure-menu-item pure-menu-selected"><a href="#" class="current-page pure-menu-link">Work</a></li><!-- 
@@ -162,13 +162,13 @@
             </ul>
             <a class="logo pure-menu-heading" href="http://jeya.io"><img src="images/logo.png" alt="Jeya Karthika"></a>
           </nav>
-          <div>
-            <p>Crafted with love by <a href="#">jeya</a>.</p>
+          <div class="copyright">
+            <p>Crafted with <span class="fa fa-heart"></span> by <a href="#">jeya</a>.</p>
             <p>Copyright &copy; 2015 Jeya. All Rights Reserved.</p>
           </div>
         </div>
         
-      </div>
+      <!-- </div> -->
     </footer>
 
   </body>
