--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!--[if IE 8]> <html class="ie8"> <![endif]-->  
 
     <!-- live reload -->
-    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+    // <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 
   </head>
   <body>
