--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <!--[if IE 7]> <html class="ie7"> <![endif]-->  
     <!--[if IE 8]> <html class="ie8"> <![endif]-->  
 
-    <!-- live reload 
-     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>-->
+    <!-- live reload -->
+     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> -->
 
   </head>
   <body>
@@ -67,7 +67,8 @@
         <ul class="menu pure-menu-list">
           <li class="pure-menu-item pure-menu-selected"><a href="#" class="current-page pure-menu-link">Work</a></li><!-- 
            --><li class="pure-menu-item"><a href="#" class="pure-menu-link">Thoughts</a></li><!-- 
-           --><li class="pure-menu-item"><a href="#" class="pure-menu-link">About &amp; Contact</a></li>
+           --><li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li><!-- 
+           --><li class="pure-menu-item"><a href="#" class="pure-menu-link"><span class="fa fa-envelope"></span></a></li>
         </ul>
       </nav>
     </header>
@@ -146,10 +147,6 @@
           <div class="icon">
             <a href="#"><span class="fa fa-behance"></span></a>
           </div>
-
-          <div class="icon">
-            <a href="#"><span class="fa fa-envelope"></span></a>
-          </div>
         </div>
 
         <!-- Footer nav and coyright -->
@@ -158,7 +155,8 @@
             <ul class="menu pure-menu-list">
               <li class="pure-menu-item pure-menu-selected"><a href="#" class="current-page pure-menu-link">Work</a></li><!-- 
                --><li class="pure-menu-item"><a href="#" class="pure-menu-link">Thoughts</a></li><!-- 
-               --><li class="pure-menu-item"><a href="#" class="pure-menu-link">About &amp; Contact</a></li>
+               --><li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li><!-- 
+               --><li class="pure-menu-item"><a href="#" class="pure-menu-link"><span class="fa fa-envelope"></span></a></li>
             </ul>
             <a class="logo pure-menu-heading" href="http://jeya.io"><img src="images/logo.png" alt="Jeya Karthika"></a>
           </nav>
