--- a/pitchmojo.html
+++ b/pitchmojo.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
 
-    <title>Jeya Karthika | User Experience Designer</title>
-
     <!-- Meta tags -->
     <meta charset="utf-8" />
+    <title>Jeya Karthika | User Experience Designer</title>
     <meta http-equiv=“X-UA-Compatible” content=“IE=edge, chrome=1” />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="This is the portfolio of Jeya Karthika, a User Experience designer based in Brisbane.">
@@ -34,23 +33,25 @@
     <meta property="og:site_name" content="Jeya Karthika" />
 
     <!-- Fonts -->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <script src="//use.typekit.net/ljp5jff.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
     
-    <link href="favicon.ico" rel="shortcut icon" />
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="style/app.css" />
 
-    <!--[if (lt IE 9) & (!IEMobile)]>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
+    <!-- Fav Icon -->
+    <link href="images/favicon.ico" rel="shortcut icon" />
+
+    <!--[if (lt IE 9)]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6/html5shiv.min.js"></script>
     <![endif]-->
 
     <!--[if IE 7]> <html class="ie7"> <![endif]-->  
     <!--[if IE 8]> <html class="ie8"> <![endif]-->  
 
-    <!-- live reload -->
-    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+    <!-- live reload
+     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> -->
 
   </head>
   <body>
