Mobile-first pitchmojo styles

--- a/pitchmojo.html
+++ b/pitchmojo.html
@@ -135,44 +135,79 @@
           <h6>Discover & Define through User Research</h6>
           <p>My focus was providing a delightful interface suitable for use on go. So, I did some initial research on the target users, the apps they use and how they use it. My research was part online and part offline. I spoke with some startup folks from India and Australia to understand their needs and how they approach their startup pitch creation.</p>
           <p>Based on my research, we were able to validate the concept and also identify key user stories to aid me in designing the interface. We got on skype often to discuss my findings and also to better understand the functionalities and limitations of the api which was already in the works. With a good understanding of the user needs, I prioritised the functionalities and created user flows for the app.</p>
-          <img src="#" />
         </div>
       </div>
+      <div class="case-study-image wrapper pure-u-1">
+        <div class="content">
+          <img src="images/pitchmojo/pitchmojo-discovery.png">
+        </div>
+      </div>      
       <div class="wrapper pure-u-1">
         <div class="content">
           <p class="section-icon"><span class="fa fa-lightbulb-o"></span></p>
           <h6>Sketching &amp; Wireframing</h6>
           <p>I did some initial sketching on paper with pencil and sharpies. After some review and iteration, used Axure to create detailled wireframes. The key here was to design, review and iterate until we had a smooth user experience. Google’s Material design was used as the guideline to create a slick, modern UI.</p>
-          <img src="#" />
-          <img src="#" />
         </div>
       </div>
+      <div class="case-study-image wrapper pure-u-1">
+        <div class="content">
+          <img src="images/pitchmojo/pitchmojo-sketches.png">
+        </div>
+      </div> 
+      <div class="case-study-image wrapper pure-u-1">
+        <div class="content">
+          <img src="images/pitchmojo/pitchmojo-wireframes.jpg">
+        </div>
+      </div> 
       <div class="wrapper pure-u-1">
         <div class="content">
           <p class="section-icon"><span class="fa fa-lightbulb-o"></span></p>
           <h6>Visual Design</h6>
           <p>I used the Bohemian Coding’s Sketch 3 to design the interface of the app. With symbols and test styles, it was easy to iterate the design and integrate user and client feedback. For user testing, I used invision to create and install the invision prototype and asked the some users to perform specific tasks. From observation and their feedback, I re-iterated the design.</p>
-          <img src="#" />
-          <img src="#" />
         </div>
       </div>
+      <div class="case-study-image wrapper pure-u-1">
+        <div class="content">
+          <img src="images/pitchmojo/pitchmojo-device-ui.png">
+        </div>
+      </div> 
+      <div class="case-study-image wrapper pure-u-1">
+        <div class="content">
+          <img src="images/pitchmojo/pitchmojo-screens.png">
+        </div>
+      </div> 
       <div class="wrapper pure-u-1">
         <div class="content">
           <p class="section-icon"><span class="fa fa-lightbulb-o"></span></p>
           <h6>Branding</h6>
           <p>After extensive mind-mapping, sketching and refining, we finalised the app icon. The app icon combines the concept of folded paper napkin, pencil tip and paper plane. </p>
-          <img src="#" />
-          <img src="#" />
-          <img src="#" />
-          <img src="#" />
+        </div>
+      </div>
+      <div class="case-study-image wrapper pure-u-1">
+        <div class="content">
+          <img src="images/pitchmojo/pitchmojo-branding-sketches.png">
+        </div>
+      </div> 
+      <div class="case-study-image wrapper pure-u-1">
+        <div class="content">
+          <img src="images/pitchmojo/pitchmojo-branding.png">
+        </div>
+      </div> 
+      <div class="case-study-image wrapper pure-u-1">
+        <div class="content">
+          <img src="images/pitchmojo/pitchmojo-landingpage.png">
+        </div>
+      </div> 
+      <div class="status wrapper pure-u-1">
+        <div class="content">
           <p>The app is currently under development. It will be coming soon to the android play store. Updates will follow.</p>
         </div>
       </div>
-      <div class="wrapper pure-u-1">
+      <div class="feedback wrapper pure-u-1">
         <div class="content">
           <p class="section-icon"><span class="fa fa-lightbulb-o"></span></p>
           <h6>Early Feedback</h6>
-          <p>“There's lot more to "Design" than meets the eye. After collaborating with Jeya for the last couple of days, I must say, she maybe new but she knows her stuff! I am just amazed at the level of commitment and involvement she puts into the project she undertakes. Awesome!! Look forward to some kickass UI/UX designs people!”<span> - Madhan, Founder</span></p>
+          <p><span class="quote">“There's lot more to "Design" than meets the eye. After collaborating with Jeya for the last couple of days, I must say, she maybe new but she knows her stuff! I am just amazed at the level of commitment and involvement she puts into the project she undertakes. Awesome!! Look forward to some kickass UI/UX designs people!”</span> - Madhan, Founder</p>
         </div>
       </div>
       <div class="view-other-work wrapper pure-u-1">
