--- a/pitchmojo.html
+++ b/pitchmojo.html
@@ -116,14 +116,14 @@
       </div>
       <div class="solution wrapper pure-u-1">
         <div class="content">
-          <p class="section-icon"><span class="fa fa-lightbulb-o"></span></p>
+          <p class="section-icon"><span class="fa fa-bolt"></span></p>
           <p>Single location to create, edit and share their pitch which is accessible anywhere and anytime.</p>
           <p>PitchMojo solves this problem by providing an android mobile app with <span>an interface designed to make the process of creating and editing your pitches easy</span>. It provides a structure to help you shape your pitch in the right way. It provides you tips to keep your pitch on track. It enables you to email and export your pitches.</p>
         </div>
       </div>
       <div class="wrapper pure-u-1">
         <div class="content">
-          <p class="section-icon"><span class="fa fa-lightbulb-o"></span></p>
+          <p class="section-icon"><span class="fa fa-comments"></span></p>
           <h6>New Beginnings</h6>
           <p>Madhan had already been remotely working with an API developer from India and Hassan, android developer based in Pakisthan and had a prototype with the basic functionality for the first release. But, until then the focus had only been on the functionality.</p>
           <p>Based on the work I did on the Jott.ly project, He approched me to design the user experience and visual design for the app. My challenge was to work with the existing api functionality and provide a good user experience.</p>
@@ -131,7 +131,7 @@
       </div>
       <div class="wrapper pure-u-1">
         <div class="content">
-          <p class="section-icon"><span class="fa fa-lightbulb-o"></span></p>
+          <p class="section-icon"><span class="fa fa-users"></span></p>
           <h6>Discover & Define through User Research</h6>
           <p>My focus was providing a delightful interface suitable for use on go. So, I did some initial research on the target users, the apps they use and how they use it. My research was part online and part offline. I spoke with some startup folks from India and Australia to understand their needs and how they approach their startup pitch creation.</p>
           <p>Based on my research, we were able to validate the concept and also identify key user stories to aid me in designing the interface. We got on skype often to discuss my findings and also to better understand the functionalities and limitations of the api which was already in the works. With a good understanding of the user needs, I prioritised the functionalities and created user flows for the app.</p>
@@ -144,7 +144,7 @@
       </div>      
       <div class="wrapper pure-u-1">
         <div class="content">
-          <p class="section-icon"><span class="fa fa-lightbulb-o"></span></p>
+          <p class="section-icon"><span class="fa fa-pencil"></span></p>
           <h6>Sketching &amp; Wireframing</h6>
           <p>I did some initial sketching on paper with pencil and sharpies. After some review and iteration, used Axure to create detailled wireframes. The key here was to design, review and iterate until we had a smooth user experience. Google’s Material design was used as the guideline to create a slick, modern UI.</p>
         </div>
@@ -161,7 +161,7 @@
       </div> 
       <div class="wrapper pure-u-1">
         <div class="content">
-          <p class="section-icon"><span class="fa fa-lightbulb-o"></span></p>
+          <p class="section-icon"><span class="fa fa-mobile"></span></p>
           <h6>Visual Design</h6>
           <p>I used the Bohemian Coding’s Sketch 3 to design the interface of the app. With symbols and test styles, it was easy to iterate the design and integrate user and client feedback. For user testing, I used invision to create and install the invision prototype and asked the some users to perform specific tasks. From observation and their feedback, I re-iterated the design.</p>
         </div>
@@ -178,7 +178,7 @@
       </div> 
       <div class="wrapper pure-u-1">
         <div class="content">
-          <p class="section-icon"><span class="fa fa-lightbulb-o"></span></p>
+          <p class="section-icon"><span class="fa fa-paint-brush"></span></p>
           <h6>Branding</h6>
           <p>After extensive mind-mapping, sketching and refining, we finalised the app icon. The app icon combines the concept of folded paper napkin, pencil tip and paper plane. </p>
         </div>
@@ -205,7 +205,7 @@
       </div>
       <div class="feedback wrapper pure-u-1">
         <div class="content">
-          <p class="section-icon"><span class="fa fa-lightbulb-o"></span></p>
+          <p class="section-icon"><span class="fa fa-quote-left"></span></p>
           <h6>Early Feedback</h6>
           <p><span class="quote">“There's lot more to "Design" than meets the eye. After collaborating with Jeya for the last couple of days, I must say, she maybe new but she knows her stuff! I am just amazed at the level of commitment and involvement she puts into the project she undertakes. Awesome!! Look forward to some kickass UI/UX designs people!”</span> - Madhan, Founder</p>
         </div>
