pitchmojo moved to folder

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <nav class="pure-menu pure-menu-horizontal">
         <a class="logo pure-menu-heading" href="http://jeya.io"><img src="images/logo.png" alt="Jeya Karthika"></a>
         <ul class="menu pure-menu-list">
-          <li class="pure-menu-item pure-menu-selected"><a href="#" class="current-page pure-menu-link">Work</a></li><!-- 
+          <li class="pure-menu-item pure-menu-selected"><a href="#work-pitchmojo" class="current-page pure-menu-link">Work</a></li><!-- 
            --><li class="pure-menu-item"><a href="#" class="pure-menu-link">Thoughts</a></li><!-- 
            --><li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li><!-- 
            --><li class="pure-menu-item"><a href="#" class="pure-menu-link"><span class="fa fa-envelope"></span></a></li>
@@ -79,7 +79,7 @@
       <div class="pure-u-1">
         <div class="section-content">
           <h2>Selected Works</h2>
-          <p>I’m Jeya Karthika, a UX designer based in Brisbane, <span>crafting delightful visual experiences for mobile/web</span> that empower and engage users. You can find some of my work <a href="#">below</a>.</p>
+          <p>I’m Jeya Karthika, a UX designer based in Brisbane, <span>crafting delightful visual experiences for mobile/web</span> that empower and engage users. You can find some of my work <a href="#work-pitchmojo">below</a>.</p>
         </div>
       </div>
 
@@ -90,7 +90,7 @@
           <h4>Android Application</h4>
           <h3>PitchMojo</h3>
           <p>Mobile app experience design that enables entrepreneurs to transform ideas to pitch on the go.</p>
-          <a href="#">View Case Study</a>
+          <a href="pitchmojo/index.html">View Case Study</a>
         </div>
       </div>
 
@@ -153,8 +153,8 @@
         <div class="pure-u-1 footer-content bottom-nav">
           <nav class="pure-menu pure-menu-horizontal">
             <ul class="menu pure-menu-list">
-              <li class="pure-menu-item pure-menu-selected"><a href="#" class="current-page pure-menu-link">Work</a></li><!-- 
-               --><li class="pure-menu-item"><a href="#" class="pure-menu-link">Thoughts</a></li><!-- 
+              <li class="pure-menu-item pure-menu-selected"><a href="http://jeya.io" class="current-page pure-menu-link">Work</a></li><!-- 
+               --><li class="pure-menu-item"><a href="http://jeya.me" class="pure-menu-link">Thoughts</a></li><!-- 
                --><li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li><!-- 
                --><li class="pure-menu-item"><a href="#" class="pure-menu-link"><span class="fa fa-envelope"></span></a></li>
             </ul>
