--- a/pitchmojo/index.html
+++ b/pitchmojo/index.html
@@ -38,10 +38,10 @@
     <script>try{Typekit.load();}catch(e){}</script>
     
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="style/app.css" />
+    <link rel="stylesheet" href="../style/app.css" />
 
     <!-- Fav Icon -->
-    <link href="images/favicon.ico" rel="shortcut icon" />
+    <link href="../images/favicon.ico" rel="shortcut icon" />
 
     <!--[if (lt IE 9)]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6/html5shiv.min.js"></script>
@@ -62,9 +62,9 @@
     <!-- Logo and top nav - reused in all pages  -->
     <header class="pure-g">
       <nav class="pure-menu pure-menu-horizontal">
-        <a class="logo pure-menu-heading" href="http://jeya.io"><img src="images/logo.png" alt="Jeya Karthika"></a>
+        <a class="logo pure-menu-heading" href="http://jeya.io"><img src="../images/logo.png" alt="Jeya Karthika"></a>
         <ul class="menu pure-menu-list">
-          <li class="pure-menu-item pure-menu-selected"><a href="#" class="current-page pure-menu-link">Work</a></li><!-- 
+          <li class="pure-menu-item pure-menu-selected"><a href="#work-pitchmojo" class="current-page pure-menu-link">Work</a></li><!-- 
            --><li class="pure-menu-item"><a href="#" class="pure-menu-link">Thoughts</a></li><!-- 
            --><li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li><!-- 
            --><li class="pure-menu-item"><a href="#" class="pure-menu-link"><span class="fa fa-envelope"></span></a></li>
@@ -139,7 +139,7 @@
       </div>
       <div class="case-study-image wrapper pure-u-1">
         <div class="content">
-          <img src="images/pitchmojo/pitchmojo-discovery.png">
+          <img src="../images/pitchmojo/pitchmojo-discovery.png">
         </div>
       </div>      
       <div class="wrapper pure-u-1">
@@ -151,12 +151,12 @@
       </div>
       <div class="case-study-image wrapper pure-u-1">
         <div class="content">
-          <img src="images/pitchmojo/pitchmojo-sketches.png">
+          <img src="../images/pitchmojo/pitchmojo-sketches.png">
         </div>
       </div> 
       <div class="case-study-image wrapper pure-u-1">
         <div class="content">
-          <img src="images/pitchmojo/pitchmojo-wireframes.jpg">
+          <img src="../images/pitchmojo/pitchmojo-wireframes.jpg">
         </div>
       </div> 
       <div class="wrapper pure-u-1">
@@ -168,12 +168,12 @@
       </div>
       <div class="case-study-image wrapper pure-u-1">
         <div class="content">
-          <img src="images/pitchmojo/pitchmojo-device-ui.png">
+          <img src="../images/pitchmojo/pitchmojo-device-ui.png">
         </div>
       </div> 
       <div class="case-study-image wrapper pure-u-1">
         <div class="content">
-          <img src="images/pitchmojo/pitchmojo-screens.png">
+          <img src="../images/pitchmojo/pitchmojo-screens.png">
         </div>
       </div> 
       <div class="wrapper pure-u-1">
@@ -185,17 +185,17 @@
       </div>
       <div class="case-study-image wrapper pure-u-1">
         <div class="content">
-          <img src="images/pitchmojo/pitchmojo-branding-sketches.png">
+          <img src="../images/pitchmojo/pitchmojo-branding-sketches.png">
         </div>
       </div> 
       <div class="case-study-image wrapper pure-u-1">
         <div class="content">
-          <img src="images/pitchmojo/pitchmojo-branding.png">
+          <img src="../images/pitchmojo/pitchmojo-branding.png">
         </div>
       </div> 
       <div class="case-study-image wrapper pure-u-1">
         <div class="content">
-          <img src="images/pitchmojo/pitchmojo-landingpage.png">
+          <img src="../images/pitchmojo/pitchmojo-landingpage.png">
         </div>
       </div> 
       <div class="status wrapper pure-u-1">
@@ -263,12 +263,12 @@
         <div class="pure-u-1 footer-content bottom-nav">
           <nav class="pure-menu pure-menu-horizontal">
             <ul class="menu pure-menu-list">
-              <li class="pure-menu-item pure-menu-selected"><a href="#" class="current-page pure-menu-link">Work</a></li><!-- 
-               --><li class="pure-menu-item"><a href="#" class="pure-menu-link">Thoughts</a></li><!-- 
+              <li class="pure-menu-item pure-menu-selected"><a href="http://jeya.io" class="current-page pure-menu-link">Work</a></li><!-- 
+               --><li class="pure-menu-item"><a href="http://jeya.me" class="pure-menu-link">Thoughts</a></li><!-- 
                --><li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li><!-- 
                --><li class="pure-menu-item"><a href="#" class="pure-menu-link"><span class="fa fa-envelope"></span></a></li>
             </ul>
-            <a class="logo pure-menu-heading" href="http://jeya.io"><img src="images/logo.png" alt="Jeya Karthika"></a>
+            <a class="logo pure-menu-heading" href="http://jeya.io"><img src="../images/logo.png" alt="Jeya Karthika"></a>
           </nav>
           <div class="copyright">
             <p>Crafted with <span class="fa fa-heart"></span> by <a href="#">jeya</a>.</p>
