--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         <a class="logo pure-menu-heading" href="http://jeya.io"><img src="images/logo.png" alt="Jeya Karthika"></a>
         <ul class="menu pure-menu-list">
           <li class="pure-menu-item pure-menu-selected"><a href="#work-pitchmojo" class="current-page pure-menu-link">Work</a></li><!-- 
-           --><li class="pure-menu-item"><a href="#" class="pure-menu-link">Thoughts</a></li><!-- 
-           --><li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li><!-- 
-           --><li class="pure-menu-item"><a href="#" class="pure-menu-link"><span class="fa fa-envelope"></span></a></li>
+           --><li class="pure-menu-item"><a href="http://jeya.me" class="pure-menu-link">Thoughts</a></li><!-- 
+           --><!-- <li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li> --><!-- 
+           --><li class="pure-menu-item"><a href="mailto:hello@jeya.me" class="pure-menu-link"><span class="fa fa-envelope"></span></a></li>
         </ul>
       </nav>
     </header>
@@ -100,7 +100,7 @@
           <h4>E-Commerce Shop</h4>
           <h3>Sutra</h3>
           <p>E-Commerce Online Shopping experience and Branding for a T-Shirt shop.</p>
-          <a href="#">View Case Study</a>
+          <a href="http://on.be.net/11zgZhr">View on Behance</a>
         </div>
       </div>
 
@@ -110,7 +110,7 @@
           <h4>SaaS Startup</h4>
           <h3>Jott.ly</h3>
           <p>Cohesive Branding and product landing page designed to encourage users to signup.</p>
-          <a href="#">View Case Study</a>
+          <a href="http://on.be.net/1rmkoFU">View on Behance</a>
         </div>
       </div>
 
@@ -122,30 +122,30 @@
 
         <!-- call to Action -->
         <div class="pure-u-1 footer-content call-to-action">
-          <p>Let's <a href="#">talk</a>.</p>
+          <p>Let's <a href="mailto:hello@jeya.me">talk</a>.</p>
           <p>About user experience, your ideas or new opportunities</p>
         </div>
 
         <!-- Social Media Icons -->
         <div class="pure-u-1 footer-content social-media-icons">
           <div class="icon">
-            <a href="#"><span class="fa fa-twitter"></span></a>
+            <a href="https://twitter.com/ItsJkTweeting"><span class="fa fa-twitter"></span></a>
           </div>
 
           <div class="icon">
-            <a href="#"><span class="fa fa-instagram"></span></a>
+            <a href="https://instagram.com/jeyakarthika"><span class="fa fa-instagram"></span></a>
           </div>
 
           <div class="icon">
-            <a href="#"><span class="fa fa-linkedin"></span></a>
+            <a href="https://au.linkedin.com/in/jeyakarthika/"><span class="fa fa-linkedin"></span></a>
           </div>
 
           <div class="icon">
-            <a href="#"><span class="fa fa-dribbble"></span></a>
+            <a href="https://dribbble.com/jeyakarthika"><span class="fa fa-dribbble"></span></a>
           </div>
 
           <div class="icon">
-            <a href="#"><span class="fa fa-behance"></span></a>
+            <a href="https://www.behance.net/jeyakarthika"><span class="fa fa-behance"></span></a>
           </div>
         </div>
 
@@ -155,8 +155,8 @@
             <ul class="menu pure-menu-list">
               <li class="pure-menu-item pure-menu-selected"><a href="http://jeya.io" class="current-page pure-menu-link">Work</a></li><!-- 
                --><li class="pure-menu-item"><a href="http://jeya.me" class="pure-menu-link">Thoughts</a></li><!-- 
-               --><li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li><!-- 
-               --><li class="pure-menu-item"><a href="#" class="pure-menu-link"><span class="fa fa-envelope"></span></a></li>
+               --><!-- <li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li> --><!-- 
+               --><li class="pure-menu-item"><a href="mailto:hello@jeya.me" class="pure-menu-link"><span class="fa fa-envelope"></span></a></li>
             </ul>
             <a class="logo pure-menu-heading" href="http://jeya.io"><img src="images/logo.png" alt="Jeya Karthika"></a>
           </nav>
