--- a/pitchmojo/index.html
+++ b/pitchmojo/index.html
@@ -50,8 +50,8 @@
     <!--[if IE 7]> <html class="ie7"> <![endif]-->  
     <!--[if IE 8]> <html class="ie8"> <![endif]-->  
 
-    <!-- live reload -->
-     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+    <!-- live reload
+     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> -->
 
   </head>
   <body>
