medium up for pitchmojo

--- a/pitchmojo/index.html
+++ b/pitchmojo/index.html
@@ -50,8 +50,8 @@
     <!--[if IE 7]> <html class="ie7"> <![endif]-->  
     <!--[if IE 8]> <html class="ie8"> <![endif]-->  
 
-    <!-- live reload
-     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> -->
+    <!-- live reload -->
+    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> 
 
   </head>
   <body>
@@ -161,7 +161,7 @@
         <div class="content">
           <p class="section-icon"><span class="fa fa-mobile"></span></p>
           <h6>Visual Design</h6>
-          <p>I used the Bohemian Coding’s Sketch 3 to design the interface of the app. With symbols and test styles, it was easy to iterate the design and integrate user and client feedback. For user testing, I used invision to create and install the invision prototype and asked the some users to perform specific tasks. From observation and their feedback, I re-iterated the design.</p>
+          <p>I used the Bohemian Coding’s Sketch 3 to design the interface of the app. With symbols and text styles, it was easy to iterate the design and integrate user and client feedback. For user testing, I used invision to create and install the invision prototype and asked the selected users to perform specific tasks. From observation and their feedback, I re-iterated the design.</p>
         </div>
       </div>
       <div class="case-study-image wrapper pure-u-1">
