--- a/pitchmojo/index.html
+++ b/pitchmojo/index.html
@@ -48,10 +48,7 @@
     <![endif]-->
 
     <!--[if IE 7]> <html class="ie7"> <![endif]-->  
-    <!--[if IE 8]> <html class="ie8"> <![endif]-->  
-
-    <!-- live reload -->
-    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> 
+    <!--[if IE 8]> <html class="ie8"> <![endif]-->
 
   </head>
   <body>
@@ -137,7 +134,7 @@
       </div>
       <div class="case-study-image wrapper pure-u-1">
         <div class="content">
-          <img src="../images/pitchmojo/pitchmojo-discovery.png">
+          <img class="img-width-adjust" src="../images/pitchmojo/pitchmojo-discovery.png">
         </div>
       </div>      
       <div class="wrapper pure-u-1">
