--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <h4>Android Application</h4>
           <h3>PitchMojo</h3>
           <p>Mobile app experience design that enables entrepreneurs to transform ideas to pitch on the go.</p>
-          <a href="pitchmojo/index.html">View Case Study</a>
+          <a href="pitchmojo/">View Case Study</a>
         </div>
       </div>
 
@@ -150,7 +150,7 @@
         <div class="pure-u-1 footer-content bottom-nav">
           <nav class="pure-menu pure-menu-horizontal">
             <ul class="menu pure-menu-list">
-              <li class="pure-menu-item pure-menu-selected"><a href="http://jeya.io" class="current-page pure-menu-link">Work</a></li><!-- 
+              <li class="pure-menu-item pure-menu-selected"><a href="#work-pitchmojo" class="current-page pure-menu-link">Work</a></li><!-- 
                --><li class="pure-menu-item"><a href="http://jeya.me" class="pure-menu-link">Thoughts</a></li><!-- 
                --><!-- <li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li> --><!-- 
                --><li class="pure-menu-item"><a href="mailto:hello@jeya.me" class="pure-menu-link"><span class="fa fa-envelope"></span></a></li>
@@ -165,7 +165,7 @@
         
       <!-- </div> -->
     </footer>
-    
+
     <!-- Google Analytics -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
