--- a/pitchmojo/index.html
+++ b/pitchmojo/index.html
@@ -61,7 +61,7 @@
       <nav class="pure-menu pure-menu-horizontal">
         <a class="logo pure-menu-heading" href="http://jeya.io"><img src="../images/logo.png" alt="Jeya Karthika"></a>
         <ul class="menu pure-menu-list">
-          <li class="pure-menu-item pure-menu-selected"><a href="#work-pitchmojo" class="current-page pure-menu-link">Work</a></li><!-- 
+          <li class="pure-menu-item pure-menu-selected"><a href="../" class="current-page pure-menu-link">Work</a></li><!-- 
            --><li class="pure-menu-item"><a href="http://jeya.me" class="pure-menu-link">Thoughts</a></li><!-- 
            --><!-- <li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li> --><!-- 
            --><li class="pure-menu-item"><a href="mailto:hello@jeya.me" class="pure-menu-link"><span class="fa fa-envelope"></span></a></li>
